src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --color-primary: #FF5B00;
    --color-text-primary: #fff;
    --color-bg-primary: 216 17% 11%;
    --color-bg-highlight: 215 15% 16%;
    --color-error: #E53E3E;
    --color-success: #3BCD52;
    --color-button-secondary-stroke: linear-gradient(90deg, #22272E 54%, #FFFFFF 54%);
    --color-button-secondary-fill: linear-gradient(90deg, #FFF 0%, #22272E 100%);
  }

  body {
    @apply bg-bgPrimary text-textPrimary text-base;
  }

  h1 {
    @apply text-[3.75rem] font-bold leading-[100%] lg:text-[4.5rem];
  }

  h2 {
    @apply text-[3rem] font-bold lg:text-[3.5rem] leading-[120%];
  }

  h3 {
    @apply text-[1.75rem] font-normal lg:text-[2.25rem] leading-[100%];
  }

  h4 {
    @apply text-[1.5rem] font-normal;
  }

  .clip-custom {
    clip-path: 
        polygon(0% 0%, 100% 0%, 0% 100%);
  }
}

@layer components {
  ::-webkit-scrollbar {
    width: 6px;
  }

  ::-webkit-scrollbar-track {
    border-radius: 100vh;
    background-color: 216 17% 11%;
  }

  ::-webkit-scrollbar-thumb {
    background-color: #888888;
    border-radius: 100vh;
    width: auto;
  }

  ::-webkit-scrollbar-thumb:hover {
    background: #fff;
    opacity: 1;
  }
}

